--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Welcome to my portfolio!
-theme: jekyll-theme-cayman
-skin: dark
+#theme: jekyll-theme-cayman
+remote_theme: lewismiddleton/cayman-dark
